--- a/dec24/package.json
+++ b/dec24/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "tip1",
+  "name": "dec24",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://janciesielczyk.github.io/dec21/tip1",
+  "homepage": "https://janciesielczyk.github.io/dec24",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gh-pages -d src --dest dec21/tip1",
+    "deploy": "gh-pages -d src --dest dec24/",
     "help": "gh-pages --help"
   },
   "author": "",
